--- a/style/Website.css
+++ b/style/Website.css
@@ -367,19 +367,19 @@ margin: 0 auto;
 }
 
 
-#dairyimg {
+#dairypic {
   display: block;
   margin-left: auto;
   margin-right: auto;
 }
 
-#vegimg {
+#vegpic {
   display: block;
   margin-left: auto;
   margin-right: auto;
 }
 
-#csimg {
+#cspic {
   display: block;
   margin-left: auto;
   margin-right: auto;
