--- a/style/Website.css
+++ b/style/Website.css
@@ -140,10 +140,11 @@ header {
 
 .navdiv li {
   margin: 2px 0;
-  padding: -20px;
+  padding: 20px; /* Changed to a positive value */
   margin-left: 8px; 
   display: block;
 }
+
 
 .navdiv li a {
   margin-left: auto;
